# puzzle-game

./: .gitignore  Cargo.toml  LICENSE  README.md  README_RU.md
assets/: game_assets.assets.ron  preload_assets.assets.ron
src/: animations.rs  assets.rs  interactable.rs  main.rs  player.rs  player_movement.rs  system.rs
