[package]
name = "puzzle_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = { version = "0.19.0", features = ["2d"] }
bevy_pixel_camera = "0.12.0"
bevy_rapier2d = "0.23.0"

# Enable low optimizations in debug mode 
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (e.g. Bevy)
[profile.dev.package."*"]
opt-level = 3