[package]
name = "puzzle_game"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = true }
bevy_asset_loader = { version = "0.19.0", features = ["2d", "3d", "standard_dynamic_assets"] }
bevy_pixel_camera = { version = "0.12.0" }
leafwing-input-manager = { version = "0.11.2" }
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
winit = "0.28"

# Enable low optimizations in debug mode 
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (e.g. Bevy)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 1
